--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   },
   "devDependencies": {
     "@types/node": "14.14.16",
+    "@typescript-eslint/eslint-plugin": "4.11.0",
+    "@typescript-eslint/parser": "4.11.0",
+    "eslint": "7.16.0",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-prettier": "3.3.0",
+    "prettier": "2.2.1",
     "ts-node": "9.1.1",
     "tsc-watch": "4.2.9",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.3.0",
     "typescript": "4.1.3"
+  },
+  "dependencies": {
+    "crypto-js": "4.0.0"
   }
 }
